--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
       <version>1.2.17</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.10</version>
+    </dependency>
+
+
   </dependencies>
 
 </project>
